--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -5,7 +5,8 @@
 %\usepackage{theorem}
 \usepackage{graphicx}
 \usepackage{mathpartir}
-\usepackage{alltt}
+\usepackage{fancyvrb}
+\usepackage{pdfsync}
 
 %%%% MACROS %%%%%
 
