--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -1,3 +1,4 @@
+% ASCII syntax
 \iffalse
 \newcommand{\ip}{p}
 \newcommand{\ix}{x}
@@ -34,6 +35,7 @@
 \newcommand{\isums}[2]{#1\,\texttt{+}\cdots\texttt{+}\,#2}
 \fi
 
+% Spiffed up syntax using mathematical symbols
 \newcommand{\ip}{\varphi}
 \newcommand{\ipp}{\rho}
 \newcommand{\ix}{x}
