--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -287,3 +287,13 @@ KEY="Peyton Jones"}
 	publisher= {Springer},
 	year=2004
 	}
+
+@Article{post47:_recur_unsol_probl_thue,
+  author = 	 {Post, E.},
+  title = 	 {Recursive Unsolvability of a Problem of Thue},
+  journal = 	 {The Journal of Symbolic Logic},
+  year = 	 1947,
+  volume =	 12,
+  pages =	 {1--11}
+}
+
