--- a/doc/cie/modest_sets.tex
+++ b/doc/cie/modest_sets.tex
@@ -264,19 +264,16 @@ that the characteristic map $\mathrm{eq} : Z \times Z \to
 by $\cfun{(k,m)}{(k=m)}$. However, not all modest sets have decidable
 equality, since there may not be a decision procedure for determining
 whether two realizers represent the same element. In particular, this
-would happen if we implemented a group with an undecidable word
+would happen if we implemented a semigroup with an undecidable word
 problem~\cite{post47:_recur_unsol_probl_thue}.
 
 
 \subsection{Uniform families}
 \label{sec:uniform-families}
 
-Give an example of a uniform family (probably the cyclic group of rank
-$n$).
+A \emph{family} of modest sets 
 
-Describe uniform families and mention that they are related to
-dependent types. Motivate and discuss the uniformity. Describe the
-dependent sums and products.
+
 
 
 %%% Local Variables: 
