--- a/doc/cie/modest_sets.tex
+++ b/doc/cie/modest_sets.tex
@@ -84,7 +84,7 @@ type~$t$ which behave \emph{functionally} in the sense
 of~\cite{longley99when}. Such values are represented by terminating
 expressions which do not raise exceptions or return different results
 on different invocations, although they \emph{may} use exceptions,
-store, and other computational effects, as long as they behave as if
+store, and other computational effects, provided they behave as if
 they did not. A useful example of a functional value using store is
 presented in Section~\ref{sec:we-show-modulus-of-continuity-example}.
 Note also that a functional value of a functional type may diverge as
