--- a/doc/cie/specifications.tex
+++ b/doc/cie/specifications.tex
@@ -1,5 +1,11 @@
-\section{Signatures and specifications}
-\label{sec:sing-spec}
+\section{Specifications as signatures with assertions}
+\label{sec:spec-sign}
+
+Our intention is to implement a structure as 
+
+
+
+
 
 Outline:
 %
